--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
   "devDependencies": {
     "gh-pages": "^5.0.0"
   },
-  "homepage": "hhttps://sabinasikacheva.github.io/mesto-react/"
+  "homepage": "https://sabinasikacheva.github.io/mesto-react/"
 }
